--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -20,7 +20,7 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><span class="d-block d-lg-none">Clarence Taylor</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><span class="d-block d-lg-none">Mohan Reddy Mummareddy</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -38,7 +38,7 @@
         <!-- About-->
         <section class="resume-section" id="about">
             <div class="resume-section-content">
-                <h1 id="firstname" class="mb-0">Clarence <span class="text-primary">Taylor</span></h1>
+                <h1 id="firstname" class="mb-0">Mohan Reddy<span class="text-primary"> Mummareddy </span></h1>
                 <div id="address_mail" class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468<a href="mailto:name@email.com">name@email.com</a></div>
                 <p class="lead mb-5"> With a complete 4.5 years of experience in Unity3D development, emphasizing AR/VR/MR along with game development. Have experience with web development using python’s flask.
                 </p>
