--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -115,6 +115,7 @@
                     <li class="list-inline-item d-flex justify-content-center align-items-center"><img style="max-width: 90%;" alt="Html5" title="Html5" src="https://img.icons8.com/dusk/64/000000/html-5.png" /></li>
                     <li class="list-inline-item d-flex justify-content-center align-items-center"><img style="max-width: 90%;" alt="Css3" title="Css3" src="https://img.icons8.com/dusk/64/000000/css3.png" /></li>
                     <li class="list-inline-item d-flex justify-content-center align-items-center"><img style="max-width: 90%;" alt="JavaScript" title="JavaScript" src="https://img.icons8.com/dusk/64/000000/javascript.png" /></li>
+                    <li class="list-inline-item d-flex justify-content-center align-items-center"><img style="max-width: 90%;" alt="Native Android" title="Native Android" src="https://img.icons8.com/plasticine/100/000000/android-os.png" /></li>
                     <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                     <li class="list-inline-item"><i class="fab fa-react"></i></li>
                     <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
