--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -55,12 +55,20 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Unity XR Developer</h3>
+                        <div class="subheading mb-3"> Reinvision Labs </div>
+                        <p> Working on an virtual experience product in which people can join in a event from anywhere AR/VR/MR/Web. </p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Unity3D Developer</h3>
                         <div class="subheading mb-3">Takeleap</div>
                         <p>Worked with latest technologies AR/MR/VR in Unity3D as well as Web based AR. Along with that gained experience in web development by working on real-time projects.<a href="https://docs.google.com/document/d/1-nKQIQUMCio8XPcM1d1vCE3dFflSsWolTjwjDuhg9bE/edit?usp=sharing"
                                 target="_blank">Check out my works here.</a></p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2018 - August 2020</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
