--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -87,6 +87,13 @@
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">IMT Ghaziabad</h3>
+                        <div class="subheading mb-3">MBA</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">June 2020 - April 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">GITAM UNIVERSITY</h3>
                         <div class="subheading mb-3">ELECTRICAL AND ELECTRONICS</div>
                         <p>CGPA: 7.13</p>
