HCL JOB Details Updated

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -53,13 +53,21 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Experience</h2>
+                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Tech Lead XR Developer</h3>
+                        <div class="subheading mb-3"> HCL Tech </div>
+                        <p> Devloping an iOS application for the client Xerox which will generate the dataset for the ML Training, using Ipad's LIDAR </p>
+                    </div>
+                   <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Unity XR Developer</h3>
                         <div class="subheading mb-3"> Reinvision Labs </div>
                         <p> Working on an virtual experience product in which people can join in a event from anywhere AR/VR/MR/Web. </p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">September 2020 - April 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
