--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -40,7 +40,7 @@
             <div class="resume-section-content">
                 <h1 id="firstname" class="mb-0">Mohan Reddy<span class="text-primary"> Mummareddy </span></h1>
                 <div id="address_mail" class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468<a href="mailto:name@email.com">name@email.com</a></div>
-                <p class="lead mb-5"> With a complete 4.5 years of experience in Unity3D development, emphasizing AR/VR/MR along with game development. Have experience with web development using python’s flask.
+                <p class="lead mb-5"> With a complete 6 years of experience in Unity3D development, emphasizing AR/VR/MR along with game development. Have experience with web development using python’s flask.
                 </p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/mohanreddy-mummareddy-50409b132/" target="blank"><i class="fab fa-linkedin-in"></i></a>
@@ -57,7 +57,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Tech Lead XR Developer</h3>
                         <div class="subheading mb-3"> HCL Tech </div>
-                        <p> Devloping an iOS application for the client Xerox which will generate the dataset for the ML Training, using Ipad's LIDAR </p>
+                        <p> Care AR Create :  Involved in the development of an iOS application for the client XEROX which will generate the dataset for the ML Training, using Ipad's LIDAR. Further which will be uploaded into a dedicated server, where the training of the ML Model will takes place and in the application, once the training is completed we can able to download and run the model for inference using Unity's barracuda.</p>
                     </div>
                    <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                 </div>
@@ -65,7 +65,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Unity XR Developer</h3>
                         <div class="subheading mb-3"> Reinvision Labs </div>
-                        <p> Working on an virtual experience product in which people can join in a event from anywhere AR/VR/MR/Web. </p>
+                        <p> Worked on an virtual experience product in which people can join in a event from anywhere AR/VR/MR/Web. </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">September 2020 - April 2021</span></div>
                 </div>
