--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -57,7 +57,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Tech Lead XR Developer</h3>
                         <div class="subheading mb-3"> HCL Tech </div>
-                        <p> Care AR Create :  Involved in the development of an iOS application for the client XEROX which will generate the dataset for the ML Training, using Ipad's LIDAR. Further which will be uploaded into a dedicated server, where the training of the ML Model will takes place and in the application, once the training is completed we can able to download and run the model for inference using Unity's barracuda.</p>
+                        <p> Care AR Create :  Involved in the development of an iOS application to the client XEROX which will generate the dataset for the ML Training, using Ipad's LIDAR. Further which will be uploaded into a dedicated server, where the training of the ML Model will takes place and in the application, once the training is completed we can able to download and run the model for inference using Unity's barracuda.</p>
                     </div>
                    <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                 </div>
